# rustty

./: .editorconfig  .gitignore  .travis.yml  CHANGELOG.md  Cargo.toml  README.md  Vagrantfile  appveyor.yml  index.html  provision.sh  rustfmt.toml  search-index.js
examples/: simple.rs
implementors/core/clone/: trait.Clone.js
implementors/core/cmp/: trait.PartialEq.js
implementors/core/convert/: trait.From.js
implementors/core/default/: trait.Default.js
implementors/core/fmt/: trait.Debug.js  trait.Display.js
implementors/core/marker/: trait.Copy.js
implementors/core/ops/: trait.Deref.js
src/: crayon.rs  lib.rs
src/screen/: mod.rs  unix.rs  windows.rs
src/tutil/src/: crayon.rs.html  lib.rs.html
tutil/: index.html  sidebar-items.js
tutil/crayon/: enum.Color.html  index.html  sidebar-items.js  struct.Style.html  struct.StyledString.html
