[package]
name = "tutil"
version = "0.1.1"
license = "MPL-2.0"
authors = ["Severen Redwood <severen@shrike.me>"]

readme = "README.md"
homepage = "https://github.com/SShrike/tutil"
description = "A toolbox for developing command line applications."
documentation = "https://shrike.me/tutil"

[dependencies]
clippy = { version = "^0.0.54", optional = true }

[features]
default=[]
lints=["clippy"]
