[package]
name = "tutil"
version = "0.1.1"
license = "MPL-2.0"
authors = ["Severen Redwood <severen@shrike.me>"]

readme = "README.md"
homepage = "https://github.com/SShrike/tutil"
description = "A toolbox for developing command line applications."
documentation = "https://shrike.me/tutil"

[dependencies]
clippy = { version = "*", optional = true }

[target."cfg(unix)".dependencies]
libc = "^0.2"

[target."cfg(windows)".dependencies]
winapi = "^0.2"
kernel32-sys = "^0.2"

[features]
default=[]
lints=["clippy"]
